<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlg_descricaoproduto"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <TextView
        android:id="@+id/txv_dlg_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dlg_descricao_texto"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dlg_preco"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <TextView
        android:id="@+id/txv_dlg_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dlg_preco_texto"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dlg_estoque"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <TextView
        android:id="@+id/txv_dlg_estoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dlg_estoque_texto"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dlg_quantidade_informada"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle" />

    <EditText
        android:id="@+id/txt_dlg_quantidade_informada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry" />


</LinearLayout>