<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--
                             <android.support.design.widget.TextInputLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">

                                 <android.support.design.widget.TextInputEditText
                                     android:id="@+id/"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:inputType=""
                                     android:hint="@string/"/>

                             </android.support.design.widget.TextInputLayout>
             -->
    <LinearLayout
        android:id="@+id/linear_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_gravarcliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CADASTRAR CLIENTE"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_do_scrool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_widgets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <!-- *************** inicio linear_views ******************* -->
                <!-- *************** inicio linear_views ******************* -->


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_senha"
                        android:inputType="numberPassword" />

                </android.support.design.widget.TextInputLayout>


                <Spinner
                    android:id="@+id/spcidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtNomeCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nomecidade"
                        android:inputType="text"
                        android:visibility="gone" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_nome"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_fantasia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_fantasia"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_cpfcnpj"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_cpfcnpj"
                        android:inputType="number"
                        android:maxLength="14" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_rginscricaoest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_rginscricaoest"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_limite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/cli_limite"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_endereco"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_bairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_bairro"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_cep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_cep"
                        android:maxLength="8"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_contato1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_contato1"
                        android:inputType="number"
                        android:maxLength="15"
                        android:text="(16)9-9999-0101" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_contato2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_contato2"
                        android:inputType="number"
                        android:maxLength="15"
                        android:text="(16)9-9999-0101" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_contato3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_contato3"
                        android:inputType="number"
                        android:maxLength="13"
                        android:text="(16)3811-0101" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtcli_nascimento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:hint="@string/cli_nascimento"
                            android:inputType="date"
                            android:text="14/09/1980"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/rec_btn_datainicial"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:onClick="data1"
                        android:src="@drawable/data1" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_email"
                        android:inputType="textEmailSubject"
                        android:text="cliente@gmai.com" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtcli_observacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cli_observacao"
                        android:inputType="text"
                        android:text="cliente-cadastrado-no-android" />

                </android.support.design.widget.TextInputLayout>


                <!-- *************** fim linear_views ******************* -->
                <!-- *************** fim linear_views ******************* -->
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>